cmake_minimum_required(VERSION 3.19)
project(Chapter_4 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter_4 P1428.c)
add_executable(P1427 P1427.c)
add_executable(P5727 P5727.c)
add_executable(P1047 P1047wa.c)
add_executable(P5728 P5728.c)
add_executable(P2550 P2550wa.c)
add_executable(P5729 P5729.c)
add_executable(test test.c)